<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Roulette">

    <TextView
        android:id="@+id/txtRoulette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roulette"
        android:textColor="#393939"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <RadioGroup
        android:id="@+id/radioGroupCouleur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoixPairImpair"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rdoPair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:text="@string/pair"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdoImpair"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/impair"
            android:textStyle="bold" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoixNombre"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtMise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelMise"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtChoixPairImpair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pair_impair"
        android:textColor="#393939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRoulette"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/txtChoixNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix_de_nombre"
        android:textColor="#393939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCouleur"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txtLabelMise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/votremise"
        android:textColor="#393939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJetonsRestants"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/txtJetonsRestants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vos_jetons_restants"
        android:textColor="#393939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/txtNbJetonsRestants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#393939"
        app:layout_constraintBottom_toBottomOf="@+id/txtJetonsRestants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/txtJetonsRestants"
        app:layout_constraintTop_toTopOf="@+id/txtJetonsRestants"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtResultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#393939"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultatLabel"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btnJouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultat"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/txtResultatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_sultat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMise"
        app:layout_constraintVertical_bias="0.14" />

    <Switch
        android:id="@+id/swToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pair_impair"
        app:layout_constraintBottom_toTopOf="@+id/txtChoixPairImpair"
        app:layout_constraintEnd_toStartOf="@+id/lblNombre"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRoulette"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="#393939"
        app:layout_constraintBottom_toTopOf="@+id/txtChoixPairImpair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRoulette" />

</androidx.constraintlayout.widget.ConstraintLayout>